fix overflow y scroll
set overflow y scroll to auto. Scroll wont show when not necessary

--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,5 +1,5 @@
 html {
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .white-page > .maindash {
